@@ -1,3 +1,9 @@
+2000-08-11  Not Zed  <NotZed@HelixCode.com>
+
+	* providers/vee/camel-vee-folder.c (vee_folder_build_folder): Free
+	the search properly.
+	(vee_folder_build): And here too.
+
 2000-08-10  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* providers/imap/camel-imap-folder.c (camel_imap_folder_changed):
